@@ -1,3 +1,7 @@
+2007-01-29  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Added focuslock toggle option.
+
 2007-01-20  Marcus Meissner  <marcus@jet.franken.de>
 
 	* Added Canon PowerShot A420.
